<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/public_tittle"
        layout="@layout/tittle" />

    <RelativeLayout
        style="@style/sign_linearLayout"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pic"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:layout_centerVertical="true"
            style="@style/switchbutton"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:clickable="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TextView
        style="@style/setting_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_cache" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TextView
        style="@style/setting_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_update" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TextView
        style="@style/setting_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_back" />


    <TextView
        android:layout_marginTop="25dp"
        style="@style/setting_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contect_us" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TextView
        style="@style/setting_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <Button
        android:layout_marginTop="50dp"
        style="@style/common_button_style"
        android:background="@color/PostmanRed"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/exit"
        android:id="@+id/btn_logout"/>
</LinearLayout>