<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/guide"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/white_backgroud"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/tv_news"
        style="@style/viewpager_navigation_bar_tab_style"
        android:drawableTop="@drawable/news_glay"
        android:text="@string/item_news"/>

    <TextView
        android:id="@+id/tv_shop"
        style="@style/viewpager_navigation_bar_tab_style"
        android:drawableTop="@drawable/shoping_glay"
        android:text="@string/item_shop"/>

    <TextView
        android:id="@+id/tv_game"
        style="@style/viewpager_navigation_bar_tab_style"
        android:drawableTop="@drawable/game_glay"
        android:text="@string/item_game" />

    <TextView
        android:id="@+id/tv_me"
        style="@style/viewpager_navigation_bar_tab_style"
        android:drawableTop="@drawable/me_glay"
        android:text="@string/item_me"/>
</LinearLayout>
</LinearLayout>