<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include
        android:id="@+id/public_tittle"
        layout="@layout/tittle" />
    <LinearLayout
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/colorGley"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/resetpassword" />
    </LinearLayout>
    <LinearLayout
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_id"
            style="@style/login_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/resetpassword_input" />
    </LinearLayout>
    <LinearLayout
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/reset_ll"
        android:visibility="gone">

        <EditText
            android:id="@+id/edit_verify"
            style="@style/login_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/verifyphone_hint" />
        <EditText
            android:id="@+id/edit_newpw"
            style="@style/login_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/resetpassword_newpw"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/public_Button"
        android:text="@string/resetpassword_nextstep"/>
</LinearLayout>