<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/public_tittle"
        layout="@layout/tittle" />

    <RelativeLayout
        android:id="@+id/rlHead"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/showhead_title" />

        <ImageView
            android:id="@+id/imgHead"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/head" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlNickname"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlPhoneNumber"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlEmail"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlTeam"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/team" />

        <TextView
            android:id="@+id/tvTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlSex"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlPosition"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/position" />

        <TextView
            android:id="@+id/tvPositon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlMyself"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/myself_title" />

        <TextView
            android:id="@+id/tvMyself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />

    <RelativeLayout
        android:id="@+id/rlPower"
        style="@style/sign_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/power_title" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_not_important" />
</LinearLayout>